--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@types/react-dom": "^18.2.25",
     "dayjs": "^1.11.10",
     "i18next": "^23.11.2",
+    "i18next-browser-languagedetector": "^7.2.1",
+    "i18next-http-backend": "^2.5.1",
     "markdown-loader": "^8.0.0",
     "markdown-to-jsx": "^7.4.7",
     "raw-loader": "^4.0.2",
@@ -26,7 +28,6 @@
     "react-i18next": "^14.1.0",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
-    "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -52,5 +53,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@reduxjs/toolkit": "^2.2.3",
+    "react-redux": "^9.1.1",
+    "typescript": "^5.4.5"
   }
 }
